--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
         </section>
 
-        <section class="con6">
+        <section class="con6 flex_vcenter">
           <div class="wpc flex_hcenter">
             <div class="left flex_vcenter">
               <div class="tit mb30">
@@ -384,13 +384,13 @@
           </div>
         </section> 
 
-        <section class="con9">
-          <div class="sign flex_vcenter">
+        <section class="con9 flex_vcenter">
+          <div class="sign ">
             <div class="imgwrap"><img src="./img/logo_big.png"></div>
           </div>
           <div class="latestwrap column3 wpc gapborder">
             <div class="col">
-              <div class="latest_tit">공지사항</div>
+              <div class="latest_tit">공지사항<a href="#" class="latest_more"><!--게시판주소넣기--></a></div>
               <div class="latest_cont">
                 <!-- 최근게시물 코드대체-->
                 <ul>
@@ -411,7 +411,7 @@
               </div>
             </div>
             <div class="col">
-              <div class="latest_tit engsignM">Q & A</div>
+              <div class="latest_tit engsignM">Q & A<a href="#" class="latest_more"><!--게시판주소넣기--></a></div>
               <div class="latest_cont">
                 <!-- 최근게시물 코드대체-->
                 <ul>
@@ -432,7 +432,7 @@
               </div>
             </div>
             <div class="col maparea">
-              <div class="latest_tit">오시는길</div>
+              <div class="latest_tit">오시는길<a href="./sub1_3.html" class="latest_more"></a></div>
               <div class="latest_cont">
                <p class="addr mb20">서울특별시 노원구 상계동 730-4, 하나빌딩 8층 (동일로 215길 2)</p>
                <div class="timearea column2">
