--- a/sub1_1.html
+++ b/sub1_1.html
@@ -144,12 +144,15 @@
           </div>
         </section>
         <section class="con3 flex_vcenter">
-          <div class="left txt20 nobr_mo">
-            <p>보이지 않는 부분의 0.1mm의 오차를 극복하는</p>
-            <p>섬세한 진료와 환자의 마음에 대한 세심한 돌봄으로</p>
-            <p>환자분들의 구강 건강과 나아가</p>
-            <p>진정한 삶의 행복으로의 회복에 기여하겠습니다.</p>
+          <div class="wpc">
+            <div class="left txt20 nobr_mo">
+                <p>보이지 않는 부분의 0.1mm의 오차를 극복하는</p>
+                <p>섬세한 진료와 환자의 마음에 대한 세심한 돌봄으로</p>
+                <p>환자분들의 구강 건강과 나아가</p>
+                <p>진정한 삶의 행복으로의 회복에 기여하겠습니다.</p>
+            </div>
           </div>
+          
           <div class="animated-title rollingcustom">
             <div class="track">
               <span class="bg-txt">Nowon Yonseirian Dental Clinic</span>
