--- a/sub1_2.html
+++ b/sub1_2.html
@@ -68,38 +68,38 @@
                     <div class="bot column2">
                       <div class="col content_in">
                         <div>
-                          <span class="engsign">University of Pensylvenia Endodontic Master course</span> 수료<br>
-                          <span class="engsign">Osstem Prothodontic Master course</span> 수료<br>
-                          <span class="engsign">Kaya</span> 임상 보철 세미나 수료<br>
-                          <span class="engsign">International Team for lmplantology member</span><br>
-                          데일카네기 최고경영자과정 서울90기 수료
+                          <p class="engsign">University of Pensylvenia Endodontic Master course</span> 수료</p>
+                          <p class="engsign">Osstem Prothodontic Master course</span> 수료</p>
+                          <p class="engsign">Kaya</span> 임상 보철 세미나 수료</p>
+                          <p class="engsign">International Team for lmplantology member</span></p>
+                          <p>데일카네기 최고경영자과정 서울90기 수료</p>
                         </div>
                         <div>
-                          2015년 <span class="engsign">Osstem Meeting Poster Presentation</span> 최우수상 수상<br>
-                          2015년 구강악안면임플란트학회 춘계학술대회 최우수 구연상 수상<br>
-                          2016년 공직치과의사회 최우수 구연상 수상<br>
-                          2016년 <span class="engsign">Shinhung lmplant Dentistry</span> 임상 포스터 우수상 수상
+                          <p>2015년 <span class="engsign">Osstem Meeting Poster Presentation</span> 최우수상 수상</p>
+                          <p>2015년 구강악안면임플란트학회 춘계학술대회 최우수 구연상 수상</p>
+                          <p>2016년 공직치과의사회 최우수 구연상 수상</p>
+                          <p>2016년 <span class="engsign">Shinhung lmplant Dentistry</span> 임상 포스터 우수상 수상</p>
                         </div>
                         <div>
-                          前) 분당예치과 치주과장 <br>
-                          前) 강남 e-플란트 치과 원장
+                          <p>前) 분당예치과 치주과장</p>
+                          <p>前) 강남 e-플란트 치과 원장</p>
                         </div>
                       </div>
   
                       <div class="col">
-                        보건복지부 인증 치주과 전문의<br>
-                        연세대학교 치과대학원 치의학 박사 졸업<br>
-                        現) 연세대학교 치과대학 외래교수<br>
-                        연세대학교 졸업<br>
-                        국민건강보험공단 일산병원 인턴 수료<br>
-                        연세대학교 신촌 세브란스 치과대학병원 레지던트 수료<br>
-                        연세대학교 신촌 세브란스 치과대학병원 임플란트 클리닉 수료<br>
-                        대한 치주과학회 정회원<br>
-                        대한 임상치주과학회 정회원<br>
-                        대한 심미치과학회 인정의<br>
-                        대한 심미치과학회 정회원<br>
-                        대한 턱관절교합학회 교합 아카데미 수료 <br>
-                        오스템 임플란트 임상지도의
+                        <p>보건복지부 인증 치주과 전문의</p>
+                        <p>연세대학교 치과대학원 치의학 박사 졸업</p>
+                        <p>現) 연세대학교 치과대학 외래교수</p>
+                        <p>연세대학교 졸업</p>
+                        <p>국민건강보험공단 일산병원 인턴 수료</p>
+                        <p>연세대학교 신촌 세브란스 치과대학병원 레지던트 수료</p>
+                        <p>연세대학교 신촌 세브란스 치과대학병원 임플란트 클리닉 수료</p>
+                        <p>대한 치주과학회 정회원</p>
+                        <p>대한 임상치주과학회 정회원</p>
+                        <p>대한 심미치과학회 인정의</p>
+                        <p>대한 심미치과학회 정회원</p>
+                        <p>대한 턱관절교합학회 교합 아카데미 수료 </p>
+                        <p>오스템 임플란트 임상지도의</p>
                       </div>
                     </div>
   
@@ -126,7 +126,7 @@
               </div>
               <div class="col right flex_vcenter">
                 <h4>Volunteer<br>Activity</h4>
-                <div class="txt20">
+                <div class="txt20 subcolor_g">
                   <p>첨단 진료에 소외된 곳에도 치료를 기다리는 많은 사람이 있습니다. </p>
                   <p>의료는 국경과 인종을 가리지 않고 제공될 수 있어야 합니다. </p>
                   <p class="nobr_self">장소를 가리지 않는, 아픈 환자에 대한 봉사는 의료가 지향하는,</p>
@@ -201,7 +201,7 @@
               </div>
             </div>
           </section>
-          <section class="con5">
+          <section class="con5 mbcon">
             <div class="wpc content p100">
               <h4 class="mbcon50">External<br>Activities</h4>
               <div class="flex_right">
