--- a/sub1_3.html
+++ b/sub1_3.html
@@ -81,9 +81,9 @@
                     <p><strong>지하철 이용 시</strong> 7호선 노원역 6번 출구 도보 4분</p></dd>
                 </dl>
               </div>
-              <div class="right pbt100">
+              <div class="right">
                   <div class="map_area flex_hcenter">
-                    map
+                    <a href="https://naver.me/F0tF022i" target="_blank"><img src="./img/sub1/sub1_3_img03.png"></a>
                   </div>            
               </div>
             </div>
