--- a/sub3_2.html
+++ b/sub3_2.html
@@ -54,8 +54,11 @@
                     <p>사전에 계획된 대로 수술을 진행함으로써 정확성과 안정성을 높이는 술식입니다.</p>
                   </div>
                 </div>
-                <div class="imgwrap"><img src="./img/sub3/sub3_2_img01_1_1.jpg"></div>
-                <h4>Navigation Implant</h4>
+                <div class="bottom">
+                  <img src="./img/sub3/sub3_2_img01_1_1.jpg">
+                  <h4>Navigation Implant</h4>
+                </div>
+                 
               </div>
             </div> 
           </section>
@@ -63,19 +66,28 @@
             <div class="winside">
               <div class="banner column3 mbcon gap20">
                 <div class="col">
+                  <div class="itemcont">
                     <div class="iconwrap"><p class="icon"></p></div>
                     <h5 class="subcolor_g">빠르고<br>정확한 수술</h5>
                     <div class="txt">0.1mm의 오차 없이 예상한 위치에 식립</div>
+                  </div>
+                  <div class="background"></div>
                 </div>
                 <div class="col">
-                  <div class="iconwrap"><p class="icon"></p></div>
-                  <h5 class="subcolor_g">편안한<br>임플란트</h5>
-                  <div class="txt">최소 절개로 출혈, 부종, 통증의 최소화 전신 질환이 있는 <strong>고령환자분께 유리</strong>합니다</div>
+                  <div class="itemcont">
+                    <div class="iconwrap"><p class="icon"></p></div>
+                    <h5 class="subcolor_g">편안한<br>임플란트</h5>
+                    <div class="txt">최소 절개로 출혈, 부종, 통증의 최소화 전신 질환이 있는 <strong>고령환자분께 유리</strong>합니다</div>
+                  </div>
+                  <div class="background"></div>
                 </div>
                 <div class="col">
-                  <div class="iconwrap"><p class="icon"></p></div>
-                  <h5 class="subcolor_g">안정성</h5>
-                  <div class="txt">예상되는 <strong>최적의 위치에 식립</strong>함으로써 임플란트의 안정성 확보</div>
+                  <div class="itemcont">
+                    <div class="iconwrap"><p class="icon"></p></div>
+                    <h5 class="subcolor_g">안정성</h5>
+                    <div class="txt">예상되는 <strong>최적의 위치에 식립</strong>함으로써 임플란트의 안정성 확보</div>
+                  </div>
+                  <div class="background"></div>
                </div>
               </div>
 
