--- a/sub3_4.html
+++ b/sub3_4.html
@@ -45,11 +45,11 @@
           <section class="con1 mbcon">
             <div class="wpc">
               <!-- <div class="imgwrap"><img src="./img/sub3/sub3_4_img01_1.png"></div> -->
-              <div class="txtwrap flex_vcenter">
+              <div class="txtwrap">
                 <div class="tit titwrap"><h3 class="mb30"><span class="subcolor_g">뼈이식 임플란트</span>란?</h3></div>
                 <div class="txt ">
-                  <p><strong>염증으로 잇몸뼈가 파괴</strong>되거나 오랜 기간동안 <strong>잇몸뼈가 흡수되어 뼈의 양이 부족해 폭이 좁은 경우</strong> 
-                    뼈이식재를 이식해 치조골을 보강하여야 안전한 임플란트 결과를 얻을 수 있습니다. </p>
+                  <p><strong>염증으로 잇몸뼈가 파괴</strong>되거나 오랜 기간동안 <strong>잇몸뼈가 흡수되어 뼈의 양이 부족해 폭이 좁은 경우</strong> </p>
+                   <p>뼈이식재를 이식해 치조골을 보강하여야 안전한 임플란트 결과를 얻을 수 있습니다. </p>
                 </div>
               </div>
               <div class="scrolltab">
