--- a/sub4.html
+++ b/sub4.html
@@ -30,7 +30,7 @@
         <div class="maintop top_sub4">
           <div class="wpc flexwrap fnlnb">
             <div class="lnbtit flex_hcenter"><h1 class="fnlnbtit"></h1></div>
-            <div class="lnb"> <!-- lnb사용시 no제거 -->
+            <div class="lnb no"> <!-- lnb사용시 no제거 -->
               <ul class="sub4 fnsubmenu" data-cur="sub4_1"></ul>
             </div>
           </div>
@@ -205,7 +205,7 @@
                 <div class="left">비수술적치료</div>
                 <div class="right">수술적치료</div>
               </div>
-              <div class="content_in column4 wpc">
+              <div class="content_in column4">
                 <div class="col">
                   <div class="img"><img src="./img/sub4/sub4_1_img07_1.png"></div>
                   <div class="txtwrap">
@@ -243,28 +243,28 @@
             </div>
           </section>
 
-          <div class="hr_primary mbcon50 wpc"></div>
-
           <section class="con4 mbcon50">
             <div class="wpc">
-              <div class="titwrap_mid centertxt mbcon50">
-                <h6>치주치료 전후</h6>
-              </div>
-
-              <div class="column2 gap">
-                <div class="col column2 p10 lista half">
-                  <div class="imgwrap col"><img src="./img/sub4/sub4_1_img04_1a.jpg"><p class="after">Before</p></div>
-                  <div class="imgwrap col"><img src="./img/sub4/sub4_1_img04_1b.jpg"><p class="after">After</p></div>
+             <div class="gallerylist pcolor">
+                <div class="in">
+                  <div class="titwrap_mid centertxt mbcon50">
+                    <h6>치주치료 전후</h6>
+                  </div>
+    
+                  <div class="column2 gap">
+                    <div class="col column2 p10 lista half">
+                      <div class="imgwrap col"><img src="./img/sub4/sub4_1_img04_1a.jpg"><p class="after">Before</p></div>
+                      <div class="imgwrap col"><img src="./img/sub4/sub4_1_img04_1b.jpg"><p class="after">After</p></div>
+                    </div>
+                    <div class="col column2 lista p10 half">
+                      <div class="imgwrap col"><img src="./img/sub4/sub4_1_img04_2a.jpg"><p class="after">Before</p></div>
+                      <div class="imgwrap col"><img src="./img/sub4/sub4_1_img04_2b.jpg"><p class="after">After</p></div>
+                    </div> 
+                  </div>
                 </div>
-                <div class="col column2 lista p10 half">
-                  <div class="imgwrap col"><img src="./img/sub4/sub4_1_img04_2a.jpg"><p class="after">Before</p></div>
-                  <div class="imgwrap col"><img src="./img/sub4/sub4_1_img04_2b.jpg"><p class="after">After</p></div>
-                </div> 
-              </div>
+             </div>
             </div>
           </section>
-
-          <div class="hr_primary wpc mbcon"></div>
 
           <section id="con4" class="con5 mbcon50">
             <div class="wpc">
@@ -296,37 +296,37 @@
               </div>
             </div>
 
-            <div class="hr_primary wpc mbcon50"></div>
-
             <div class="wpc">
               <div class="content_2 mbcon50">
-                <div class="titwrap_mid centertxt mbcon50">
-                  <h6>치은이식술 전후</h6>
-                </div>
-                <div class="column2 gap listb half">
-                  <div class="col column2 p10">
-                    <div class="imgwrap col"><img src="./img/sub4/sub4_1_img06_1a.jpg"><p class="after">Before</p></div>
-                    <div class="imgwrap col"><img src="./img/sub4/sub4_1_img06_1b.jpg"><p class="after">After</p></div>
-                  </div>
-                  <div class="col column2 p10">
-                    <div class="imgwrap col"><img src="./img/sub4/sub4_1_img06_2a.jpg"><p class="after">Before</p></div>
-                    <div class="imgwrap col"><img src="./img/sub4/sub4_1_img06_2b.jpg"><p class="after">After</p></div>
-                  </div> 
-                  <div class="col column2 p10">
-                    <div class="imgwrap col"><img src="./img/sub4/sub4_1_img06_3a.jpg"><p class="after">Before</p></div>
-                    <div class="imgwrap col"><img src="./img/sub4/sub4_1_img06_3b.jpg"><p class="after">After</p></div>
-                  </div>
-                  <div class="col column2 p10">
-                    <div class="imgwrap col"><img src="./img/sub4/sub4_1_img06_4a.jpg"><p class="after">Before</p></div>
-                    <div class="imgwrap col"><img src="./img/sub4/sub4_1_img06_4b.jpg"><p class="after">After</p></div>
-                  </div> 
+                <div class="gallerylist pcolor">
+                   <div class="in">
+                      <div class="titwrap_mid centertxt mbcon50">
+                        <h6>치은이식술 전후</h6>
+                      </div>
+                      <div class="column2 gap listb half">
+                        <div class="col column2 p10">
+                          <div class="imgwrap col"><img src="./img/sub4/sub4_1_img06_1a.jpg"><p class="after">Before</p></div>
+                          <div class="imgwrap col"><img src="./img/sub4/sub4_1_img06_1b.jpg"><p class="after">After</p></div>
+                        </div>
+                        <div class="col column2 p10">
+                          <div class="imgwrap col"><img src="./img/sub4/sub4_1_img06_2a.jpg"><p class="after">Before</p></div>
+                          <div class="imgwrap col"><img src="./img/sub4/sub4_1_img06_2b.jpg"><p class="after">After</p></div>
+                        </div> 
+                        <div class="col column2 p10">
+                          <div class="imgwrap col"><img src="./img/sub4/sub4_1_img06_3a.jpg"><p class="after">Before</p></div>
+                          <div class="imgwrap col"><img src="./img/sub4/sub4_1_img06_3b.jpg"><p class="after">After</p></div>
+                        </div>
+                        <div class="col column2 p10">
+                          <div class="imgwrap col"><img src="./img/sub4/sub4_1_img06_4a.jpg"><p class="after">Before</p></div>
+                          <div class="imgwrap col"><img src="./img/sub4/sub4_1_img06_4b.jpg"><p class="after">After</p></div>
+                        </div> 
+                      </div>
+                   </div>
                 </div>
               </div>
              
             </div>
           </section>
-
-          <div class="hr_primary wpc mbcon"></div>
 
           <section id="con5" class="con6">
             <div class="winside">
