--- a/sub5.html
+++ b/sub5.html
@@ -24,28 +24,27 @@
   </head>
   <body>
     <div id="wrap">   
-      <div class="popup" id="p001">
-        <button class="close" onclick="popupclose(this)">닫기</button>
-        <div class="popupwrap">
-          <div class="popcont">
-            <iframe src="https://player.vimeo.com/video/897078437?h=8f080baf5c&amp;autoplay=0&amp;loop=1&amp;muted=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen=""></iframe>
-          </div>
-        </div>
-      </div>
       <header id="header"></header>
       <main>
 
         <div class="maintop top_sub5">
           <div class="wpc flexwrap fnlnb">
             <div class="lnbtit flex_hcenter"><h1 class="fnlnbtit"></h1></div>
-            <div class="lnb"> <!-- lnb사용시 no제거 -->
+            <div class="lnb no"> <!-- lnb사용시 no제거 -->
               <ul class="sub5 fnsubmenu" data-cur="sub5_1"></ul> 
             </div>
           </div>
         </div>
 
         <div id="main" class="main-wrap subpage sub5_1">
-
+          <div class="popup" id="p001">
+            <button class="close" onclick="popupclose(this)">닫기</button>
+            <div class="popupwrap">
+              <div class="popcont">
+                <video src="./video/sub5_care.mov" autoplay muted loop></video>
+              </div>
+            </div>
+          </div>
           <div class="maintitwrap">
             <h2 class="maintit">심미치료 클리닉</h2>
           </div>  
@@ -99,10 +98,14 @@
 
                   <div class="list2 column2 listc mb30">
                     <div class="col">
-                      <div class="imgwrap"><img src="./img/sub5/sub5_1_img02_1.jpg"> </div>
+                      <div class="imgwrap"><img src="./img/sub5/sub5_1_img02_1.jpg">
+                        <div class="after2">치아의 모양 및 치열이 고르지 않은 경우</div>
+                      </div>
                     </div>
                     <div class="col">
-                      <div class="imgwrap"><img src="./img/sub5/sub5_1_img02_2.jpg"> </div>
+                      <div class="imgwrap"><img src="./img/sub5/sub5_1_img02_2.jpg"> 
+                        <div class="after2">치아의 변색이 있는 경우</div>
+                      </div>
                     </div>
                   </div>  
                   <div class="list column5 listc mb30 gapborder centertxt">
@@ -251,30 +254,30 @@
                     </div> 
                     <div class="list column2 liste mb30 gapborder  gapborder_bottom">
                       <div class="col flex gap">
-                        <div class="imgwrap"><img src="./img/sub3/sub3_4_img04_1.jpg"><p class="after">Before</p>
+                        <div class="imgwrap"><img src="./img/sub5/sub5_1_img05_2a.jpg"><p class="after">Before</p>
                         </div>
-                        <div class="imgwrap result"><img src="./img/sub5/sub5_1_img05_1d.jpg"><p class="after subcolor_y">After</p>
+                        <div class="imgwrap result"><img src="./img/sub5/sub5_1_img05_2b.jpg"><p class="after subcolor_y">After</p>
                         </div>
                       </div>
                       <div class="col flex gap">
-                        <div class="imgwrap"><img src="./img/sub3/sub3_4_img04_1.jpg"><p class="after">Before</p>
+                        <div class="imgwrap"><img src="./img/sub5/sub5_1_img05_3a.jpg"><p class="after">Before</p>
                         </div>
-                        <div class="imgwrap result"><img src="./img/sub5/sub5_1_img05_1d.jpg"><p class="after subcolor_y">After</p>
+                        <div class="imgwrap result"><img src="./img/sub5/sub5_1_img05_3b.jpg"><p class="after subcolor_y">After</p>
                       </div>
                     </div> 
 
                     </div> 
                     <div class="list column2 liste mb30 gapborder  gapborder_bottom">
                       <div class="col flex gap">
-                        <div class="imgwrap"><img src="./img/sub3/sub3_4_img04_1.jpg"><p class="after">Before</p>
+                        <div class="imgwrap"><img src="./img/sub5/sub5_1_img05_4a.jpg"><p class="after">Before</p>
                         </div>
-                        <div class="imgwrap result"><img src="./img/sub5/sub5_1_img05_1d.jpg"><p class="after subcolor_y">After</p>
+                        <div class="imgwrap result"><img src="./img/sub5/sub5_1_img05_4b.jpg"><p class="after subcolor_y">After</p>
                         </div>
                       </div>
                       <div class="col flex gap">
-                        <div class="imgwrap"><img src="./img/sub3/sub3_4_img04_1.jpg"><p class="after">Before</p>
+                        <div class="imgwrap"><img src="./img/sub5/sub5_1_img05_5a.jpg"><p class="after">Before</p>
                         </div>
-                        <div class="imgwrap result"><img src="./img/sub5/sub5_1_img05_1d.jpg"><p class="after subcolor_y">After</p>
+                        <div class="imgwrap result"><img src="./img/sub5/sub5_1_img05_5b.jpg"><p class="after subcolor_y">After</p>
                       </div>
                     </div> 
 
