--- a/sub6_1.html
+++ b/sub6_1.html
@@ -45,9 +45,11 @@
           <section class="con1 mbcon">
             <div class="con1_1">
               <div class="left txt">
-                <p>충치는 구강내 세균에 의해 치아가 부식되어 가는 과정으로</p>
-                <p>발생한 위치와 면적, 깊이에 따라</p>
-                <p>치료 방법 및 수복물의 재료가 달라집니다.</p>
+                <div class="gradient">
+                  <p>충치는 구강내 세균에 의해 치아가 부식되어 가는 과정으로</p>
+                  <p>발생한 위치와 면적, 깊이에 따라</p>
+                  <p>치료 방법 및 수복물의 재료가 달라집니다.</p>
+                </div>
               </div>
               <div class="right imgwrap"><img src="./img/sub6/sub6_1_img01.jpg"></div>
             </div> 
