--- a/sub6_3.html
+++ b/sub6_3.html
@@ -43,10 +43,10 @@
             <h5 class="fsize20"><span>사랑니는 제3의 대구치(큰 어금니) 로서 관리가 되지 않아</span><span>충치, 잇몸 통증 또는 인접치에 안 좋은 영향을 주거나, 구강내 낭종을 형성할 경우 발치가 필요합니다.</span></h5>
           </div>  
           
-          <section class="mbcon fullimgwrap con0">
+          <section class="mbcon con0">
            
             <div class="wpc">
-              <div class="fullimg"><img src="./img/sub6/sub6_2_img01.jpg"></div>
+              <div class="imgwrap"><img src="./img/sub6/sub6_3_img01.jpg"></div>
             </div>
         </section>
 
