--- a/sub3_5.html
+++ b/sub3_5.html
@@ -46,7 +46,7 @@
             <div class="semiwidegallery cust2 column2">
               <div class="right col">
                 <div class="imgwrap"><img src="./img/sub3/sub3_5_img01_01.jpg"></div>
-                <div class="txtwrap flex_vcenter">
+                <div class="txtwrap">
                   <div class="tit titwrap"><h3><span class="subcolor_g">발치즉시 임플란트</span>란?</h3></div>
                   <div class="txt">
                     <p>일반적인 임플란트는 발치한 이후 3개월 가량 지나고 식립합니다. </p>
