--- a/sub6_5.html
+++ b/sub6_5.html
@@ -42,8 +42,8 @@
             <h2 class="maintit">구강검진</h2>
           </div>  
           
-          <section class="fullimgwrap con2">
-            <div class="fullimg"><img src="./img/sub6/sub6_5_img01.jpg"></div>
+          <section class="con2">
+            <!-- <div class="fullimg"><img src="./img/sub6/sub6_5_img01.jpg"></div>  -->
             <div class="content flex_hcenter">
               <div class="content_in flex_hcenter">
                 <div class="img mbcon50"><img src="./img/sub6/sub6_5_img02.png"></div>
